--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,18 @@
 <head>
 </head>
 <body>
-<form action="/post" method="POST">
+
+<strong>
+{% with messages = get_flashed_messages() %}
+   {% if messages %}
+      {% for message in messages %}
+         {{ message }}
+      {% endfor %}
+   {% endif %}
+{% endwith %}
+</strong>
+
+<form action="/home" method="POST">
 	<h1>{{username}}'s Finstagram</h1> 
 
 <style type="text/css">
@@ -14,20 +25,57 @@
 Personal Wall
 
 <table>
+	<th>Photo</th>
 	<th>PhotoID</th>
+	<th>Name</th>
 	<th>Poster</th>
 	<th>Posting Date</th>
 	<th>caption</th>
+	<th>Tagged Users</th>
+	<th>Liked & Rating</th>
 
 {% for line in posts %}
 	<tr>
+		<td><img src="/static/{{line.filePath}}" height = "200" width="300"/></td>
 		<td>{{line.ID}}</td>
+		<td>{{line.firstName}} {{line.lastName}}</td>
 		<td>{{line.photoOwner}}</td>
 		<td>{{line.postingDate}}</td>
 		<td>{{line.caption}}</td>
-	</tr>
+		<td>{% for tag in tagposts %}
+			{%if line.ID ==tag.ID %}
+				{{tag.username}}
+				<br>
+			{%endif%}
+			{%endfor%}
+		</td>
+		<td>
+			<table>
+				<th>username</th>
+				<th>rating</th>
+				{% for like in likepost %}
+				{%if line.ID ==like.ID %}
+				<tr>
+					<td>{{like.username}}</td>
+					<td>{{like.rating}}</td>
+				</tr>
+				{%endif%}
+				{%endfor%}
+			</table>
+		</td>
+		</tr>
+		<td>
+			<form action="/tagAuth" method="POST">
+				<input type="text" name = "taggedUsername" placeholder="Tag a Person" required/> </br>
+				<input type="submit" value = Tag! />
+				<input type="hidden" name = "ID" value="{{line.ID}}"/>
+			</form>
+		</td>
+
+	
 {% endfor %}
 </table>
+
 
 <br>
 <a href="/view">View Posts</a>
@@ -38,7 +86,9 @@ Personal Wall
 <br>
 <a href="/select_blogger">Public</a>
 <br>
-<a href="/following">Following Friends</a>
+<a href="/manage">Requests</a>
+<br>
+<a href="/following">Follwing & Followers</a>
 <br>
 <a href="/logout">Logout</a>
 
